app/assets/stylesheets/partials/_navbar.scss
nav {
    z-index: 1;
}

.content-container {
    @include bp (mobile) {
        padding: 70px 15px 15px;
    }
    @include bp (small) {
        padding: 73px 22px 10px 300px;
        left: 250px;
        top: 50px;
        width: calc(100% -250px);
    }
}

.signout {
    @include bp (mobile) {
        width: 100%;
    }
    @include bp (small) {
        width: 250px;
    };
    height: 50px;
    position: fixed;
    z-index: 2;
    width: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-bottom: $border;
    border-right: $border;
    background: white;

    span {
        @include bp (small) {
            &:hover {
                font-size: 1.25rem;
            }
        }
        text-align: center;
        width: 50%;

        a {
            padding-left: 5px;
        }
    }
}

.left-aside {
    @include bp (mobile) {
        display: none;
    }
    @include bp (small) {
        background: white;
        padding-top: 40px;
        position: fixed;
        height: 100vh;
        width: 250px;
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        text-align: center;
        border-right: $border;

        .logo-container {
            display: flex;
            flex-direction: column;
            padding-top: 25px;

            .bmirror {
                height: 75px;
                width: 75px;
            }
        }

        .moti-container {
            width: 205px;
            display: flex;
            flex-direction: column;
            line-height: 1.5rem;

            i {
                color: $mainColor;

                &:first-child {
                    padding-right: 160px;
                }

                &:last-child {
                    padding-left: 160px;
                }
            }
        }

        i {
            font-size: 1.5rem;
        }
    }

    .moti-click {
        padding: 5px;
        border-top: $border;
        width: 100%;

        i {
            &:hover {
                cursor: pointer;
            }
        }
    }
}

.fixed-nav {
    @include bp (mobile) {
        position: fixed;
        display: flex;
        bottom: 0;
        left: 0;
        width: 100%;
        height: 50px;
    }
    @include bp(small) {
        .bmirror {
            display: none;
        }
        border-bottom: $border;
        height: 50px;
        background: white;

        ul {
            width: 70%;
            display: flex;
            justify-content: space-between;
            align-items: center;

            li {
                height: 100%;
                width: 25%;
                padding-top: 18px;
                text-align: center;

                &:hover {
                    font-size: 1.25rem;
                    padding-top: 16px;
                }
            }
        }
        top: 0;
        left: 250px;
    };
}
// .fixed-nav {
//     @include bp (mobile) {
//         position: fixed;
//         display: inline-block;
//         bottom: 0;
//         left: 0;
//         width: 100%;
//         height: 50px;
//         box-shadow: -2px -2px 2px 2px rgba(0,0,0,0.24);
//
//         &:hover {
//             box-shadow: none;
//         }
//
//         &:hover ul {
//             position: relative;
//             display: flex;
//             flex-direction: column;
//             height: 216px;
//             top: -258px;
//             font-size: 2rem;
//
//             li {
//                 background: rgba(white,.9);
//                 padding-top: 10px;
//                 padding-bottom: 10px;
//                 box-shadow: -2px -2px 2px 2px rgba(0,0,0,0.24);
//
//                 &:hover {
//                     border-left: 10px solid $mainColor;
//                 }
//             }
//         }
//
//         .menu-hover {
//             display: flex;
//             align-items: center;
//             justify-content: center;
//             border: none;
//             background: transparent;
//             width: 100%;
//             height: 50px;
//             padding: 0;
//
//             img {
//                 width: 2.5rem;
//                 height: 2.5rem;
//             }
//         }
//         background: rgba(white,.9);
//     }
//     @include bp (small) {
//         height: 52px;
//         top: 0;
//         background: rgba(white,.8);
//         box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
//
//         .menu-hover {
//             display: none;
//         }
//
//         &:hover ul {
//             background: none;
//             display: flex;
//             justify-content: center;
//             flex-direction: row;
//             height: 100%;
//             font-size: 1rem;
//             top: 0;
//             box-shadow: none;
//
//             li {
//                 box-shadow: none;
//                 background: none;
//                 border-bottom: none;
//                 padding: 0;
//
//                 &:hover {
//                     background: none;
//                     border-bottom: 10px solid $mainColor;
//                     border-left: none;
//                     box-shadow: none;
//                 }
//             }
//         }
//
//         ul {
//             width: 100%;
//             position: relative;
//             display: flex;
//             justify-content: center;
//         }
//
//         li {
//             text-align: center;
//             width: 25%;
//             margin-top: 20px;
//             padding-bottom: 7px;
//
//             &:hover {
//                 border-bottom: 10px solid $mainColor;
//             }
//         }
//     }
// }
//
// .fixed-nav ul {
//     padding: 0;
// }
//
// .fixed-nav a {
//     text-decoration: none;
//     text-transform: uppercase;
//     padding: 17px;
//     color: #333;
// }

